[package]
name = "instrumented-mpsc"
version = "0.1.0"
authors = ["Max Inden <mail@max-inden.de>"]
edition = "2018"
description = "Wrapper for futures mpsc unbounded providing Prometheus metrics."
license = "MIT OR Apache-2.0"
keywords = [ "async", "debugging", "monitoring", "mpsc", "prometheus" ]
repository = "https://github.com/mxinden/instrumented-mpsc/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
prometheus = "0.7"
lazy_static = "1"
